--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,21 @@
 language: python
 python:
-  - "3.6"
+  - "2.7"
+  - "3.4"
+  - "3.5"
+  - "3.6"      # current default Python on Travis CI
+  - "3.7"
+  - "3.8"
+  - "3.9"
+  - "3.9-dev"  # 3.9 development branch
+  - "nightly"  # nightly build
+before_install:
+  - python --version
+  - pip install -U pip
+  - pip install -U pytest
 # command to install dependencies
 install:
   - pip install -r requirements.txt
 # command to run tests
 script:
-  - pytest helloworld
+  - pytest
