--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,15 @@
 language: python
-python:
-  - "2.7"
-  - "3.4"
-  - "3.5"
-  - "3.6"      # current default Python on Travis CI
-  - "3.7"
-  - "3.8"
-  - "3.9"
-  - "3.9-dev"  # 3.9 development branch
-  - "nightly"  # nightly build
+
+services:
+  - docker
+
 before_install:
-  - python --version
-  - pip install -U pip
-  - pip install -U pytest
-# command to install dependencies
-install:
-  - pip install -r requirements.txt
-# command to run tests
+  - cd api-tester
+  - docker build -t andem/tcmg412-tester .
+  - cd ../flask-api
+  - docker build -t andem/tcmg412-api .
+  - docker-compose up d
+  - docker ps
+
 script:
-  - pytest
+  - docker run andem/tcmg412-tester
